--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:customrange="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="cong.lance.customrangenumberedittext.MainActivity">
-
-    <cong.lance.customrangenumberedittext.view.CustomRangeNumberEditText
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        customrange:minDouble="-20"
-        customrange:maxDouble="25" />
+    tools:context="cong.lance.test.MainActivity">
 
     <EditText
-        android:layout_width="200dp"
-        android:layout_height="wrap_content" />
-</RelativeLayout>
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="Hello World!" />
+
+    <lance.view.CustomRangeNumberEditText
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        customrange:maxDouble="25"
+        customrange:minDouble="-20" />
+
+</LinearLayout>
